fix for gh-pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>¡Bienvenid@! Esto es el <em>Club de Programación de SEK-Ciudalcampo</em>, parte del proyecto <em>STEAMove</em> en colaboración con <a href="http://hackclub.com/">Hack Club</a>.</p>
 		<p style="margin-bottom: 0px">Presentación oficial: <strong>24 de Febrero, 2017</strong></p>
 		<p>16:00-17:00. En la Sala de Conferencias</p>
-		<a class="button button-primary" href="attend.html">Asistir</a>
+		<a class="button button-primary" href="registration/attend.html">Asistir</a>
       </div>
       <div class="one-half column" style="margin-top: 25%">
         <h4>Presentation agenda</h4>
