a lot of changes to design and forms

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,28 +39,44 @@
 
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
+  <div class="container main-content">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <img src="https://avatars3.githubusercontent.com/u/23102928" alt="Logo" style="border-radius: 4px; margin-bottom: 10px" width="80px"><h2>code @ SEKCC</h2>
-        <p>¡Bienvenid@! Esto es el <em>Club de Programación de SEK-Ciudalcampo</em>, parte del proyecto <em>STEAMove</em> en colaboración con <a href="http://hackclub.com/">Hack Club</a>.</p>
-		<p style="margin-bottom: 0px">Presentación oficial: <strong>24 de Febrero, 2017</strong></p>
-		<p>16:00-17:00. En la Sala de Conferencias</p>
-		<a class="button button-primary" href="registration/attend.html">Asistir</a>
+        <img src="https://avatars3.githubusercontent.com/u/23102928" alt="Logo" style="border-radius: 4px; margin-bottom: 10px" width="80px" class="animated fadeInDown">
+        <h2>code @ SEKCC</h2>
+        <p>Hey there! This is the online website for <em>SEK-Ciudalcampo's Coding Club</em>, which is part of <em>Project STEAMove</em> and <a href="http://hackclub.com/">Hack Club</a>.</p>
+		<p style="margin-bottom: 0px">The Club's Official Presentation will be held <strong>February 24, 2017</strong></p>
+		<p>from 16:00-17:00 at the Auditorium next to the lab.</p>
+		<!--<a class="typeform-share button button-primary" href="https://margobra8.typeform.com/to/mIvGaD" data-mode="1" target="_blank">Attend</a>-->
+        <a class="button button-primary" href="attend.html">Attend</a>
       </div>
       <div class="one-half column" style="margin-top: 25%">
         <h4>Presentation agenda</h4>
         <ol>
             <li>Introduction</li>
             <li>Ice-breaker</li>
-            <li>The Club</li>
-            <li>Q&amp;A Rally Robin</li>
+            <li>What's Hack Club?</li>
+            <li>Why learn to code?</li>
+            <li>Q&amp;A with Club Leaders</li>
         </ol>
       </div>
     </div>
   </div>
 
+  <footer>
+    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
+    </div>
+  </footer>
+
+  <!-- TYPEFORM
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href='css/form-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
+
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
+
+
+
