--- a/attend.html
+++ b/attend.html
@@ -25,8 +25,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,17 +39,26 @@
 
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <form>
+  <div class="container animated fadeIn">
+    <form action="https://formspree.io/margobra8@gmail.com" method="POST">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>success!</h4>
-        <p>Your email has been submitted correctly.</p>
-        <p><em>Have a nice day!</em></p>
+        <h4>attend</h4>
+        <label for="EmailInput">Your preferred email</label>
+        <input type="text" name="_gotcha" style="display:none" />
+        <input class="u-full-width" placeholder="darthvader@galaxy.com" id="EmailInput" type="email" name="_replyto">
+        <p>We promise we won't share your email with any third party or fill your inbox with spam.</p>
+        <input type="hidden" name="_next" value="//code-sekcc.github.io/success.html" />
+        <input class="button" value="Submit" type="submit">
       </div>
     </div>
     </form>
   </div>
+
+  <footer>
+    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
+    </div>
+  </footer>
 
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
