--- a/success.html
+++ b/success.html
@@ -25,8 +25,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -37,20 +39,23 @@
 
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <form action="process.php" method="post">
+  <div class="container animated fadeIn">
+    <form>
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>attend</h4>
-        <label for="exampleEmailInput">Your preferred email</label>
-        <input class="u-full-width" placeholder="darthvader@galaxy.com" id="EmailInput" type="email">
-        <p>We promise we won't share your email with any third party or fill your inbox with spam.</p>
-        <input class="button" value="Submit" type="submit">
+        <h4>success!</h4>
+        <p>Your email has been submitted correctly.</p>
+        <p><em>Have a nice day!</em></p>
       </div>
     </div>
     </form>
   </div>
 
+  <footer>
+    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
+    </div>
+  </footer>
+  
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
