minor changes to text

--- a/attend.html
+++ b/attend.html
@@ -46,7 +46,7 @@
         <h4>attend</h4>
         <label for="EmailInput">Your preferred email</label>
         <input type="text" name="_gotcha" style="display:none" />
-        <input class="u-full-width" placeholder="darthvader@galaxy.com" id="EmailInput" type="email" name="_replyto">
+        <input class="u-full-width email" placeholder="example@alumno.sek.es" id="EmailInput" type="email" name="_replyto">
         <p>We promise we won't share your email with any third party or fill your inbox with spam.</p>
         <input type="hidden" name="_next" value="//code-sekcc.github.io/success.html" />
         <input class="button" value="Submit" type="submit">
