--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   <div class="container main-content">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <img src="https://avatars3.githubusercontent.com/u/23102928" alt="Logo" style="border-radius: 4px; margin-bottom: 10px" width="80px" class="animated fadeInDown">
+        <img src="https://avatars3.githubusercontent.com/u/23102928" alt="Logo" style="border-radius: 4px; margin-bottom: 10px" width="80px" class="animated fadeInDown logo">
         <h2>code @ SEKCC</h2>
         <p>Hey there! This is the online website for <em>SEK-Ciudalcampo's Coding Club</em>, which is part of <em>Project STEAMove</em> and <a href="http://hackclub.com/">Hack Club</a>.</p>
-		<p style="margin-bottom: 0px">The Club's Official Presentation will be held <strong>February 24, 2017</strong></p>
+		<p style="margin-bottom: 0px">The Club's Official Presentation will be held on <strong>February 24, 2017</strong></p>
 		<p>from 16:00-17:00 at the Auditorium next to the lab.</p>
 		<!--<a class="typeform-share button button-primary" href="https://margobra8.typeform.com/to/mIvGaD" data-mode="1" target="_blank">Attend</a>-->
         <a class="button button-primary" href="attend.html">Attend</a>
@@ -55,8 +55,8 @@
         <ol>
             <li>Introduction</li>
             <li>Ice-breaker</li>
-            <li>What's Hack Club?</li>
             <li>Why learn to code?</li>
+            <li>What's Hack Club?</li>
             <li>Q&amp;A with Club Leaders</li>
         </ol>
       </div>
