--- a/success.html
+++ b/success.html
@@ -5,14 +5,14 @@
   <!-- Page Meta
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>code @ SEKCC | Attend</title>
+  <title>code @ SEKCC | Succcess</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="images/favicon.png">
   <meta name="og:image" content="images/favicon.png">
   <meta name="og:title" content="code @ SEKCC">
   <meta name="twitter:title" content="code @ SEKCC">
-  <meta name="og:description" content="Club de programación de SEK-Ciudalcampo.">
-  <meta name="twitter:description" content="Club de programación de SEK-Ciudalcampo.">
+  <meta name="og:description" content="SEK-Ciudalcampo's Coding Club">
+  <meta name="twitter:description" content="Club de programación de SEK-Ciudalcampo">
   <meta name="description" content="Club de programación de SEK-Ciudalcampo.">
 
   <!-- Mobile Handling
@@ -55,7 +55,7 @@
     <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
     </div>
   </footer>
-  
+
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
