--- a/success.html
+++ b/success.html
@@ -5,15 +5,15 @@
   <!-- Page Meta
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>code @ SEKCC | Succcess</title>
+  <title>code @ SEKCC | Success</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="images/favicon.png">
   <meta name="og:image" content="images/favicon.png">
   <meta name="og:title" content="code @ SEKCC">
   <meta name="twitter:title" content="code @ SEKCC">
   <meta name="og:description" content="SEK-Ciudalcampo's Coding Club">
-  <meta name="twitter:description" content="Club de programación de SEK-Ciudalcampo">
-  <meta name="description" content="Club de programación de SEK-Ciudalcampo.">
+  <meta name="twitter:description" content="SEK-Ciudalcampo's Coding Club">
+  <meta name="description" content="SEK-Ciudalcampo's Coding Club">
 
   <!-- Mobile Handling
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -40,7 +40,6 @@
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container animated fadeIn">
-    <form>
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>success!</h4>
@@ -48,7 +47,6 @@
         <p><em>Have a nice day!</em></p>
       </div>
     </div>
-    </form>
   </div>
 
   <footer>
