--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta name="og:image" content="images/favicon.png">
   <meta name="og:title" content="code @ SEKCC">
   <meta name="twitter:title" content="code @ SEKCC">
-  <meta name="og:description" content="Club de programación de SEK-Ciudalcampo.">
-  <meta name="twitter:description" content="Club de programación de SEK-Ciudalcampo.">
-  <meta name="description" content="Club de programación de SEK-Ciudalcampo.">
+  <meta name="og:description" content="SEK-Ciudalcampo's Coding Club">
+  <meta name="twitter:description" content="SEK-Ciudalcampo's Coding Club">
+  <meta name="description" content="SEK-Ciudalcampo's Coding Club">
 
   <!-- Mobile Handling
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -64,7 +64,7 @@
   </div>
 
   <footer>
-    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
+    <div class="container"><a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="mailto:marcos.gomez@alumno.sek.es">Contact</a>
     </div>
   </footer>
 
