--- a/attend.html
+++ b/attend.html
@@ -11,9 +11,9 @@
   <meta name="og:image" content="images/favicon.png">
   <meta name="og:title" content="code @ SEKCC">
   <meta name="twitter:title" content="code @ SEKCC">
-  <meta name="og:description" content="Club de programación de SEK-Ciudalcampo.">
-  <meta name="twitter:description" content="Club de programación de SEK-Ciudalcampo.">
-  <meta name="description" content="Club de programación de SEK-Ciudalcampo.">
+  <meta name="og:description" content="SEK-Ciudalcampo's Coding Club">
+  <meta name="twitter:description" content="SEK-Ciudalcampo's Coding Club">
+  <meta name="description" content="SEK-Ciudalcampo's Coding Club">
 
   <!-- Mobile Handling
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
