--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
 
   <footer>
-    <div class="container"><a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="mailto:marcos.gomez@alumno.sek.es">Contact</a>
+    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
     </div>
   </footer>
 
