--- a/attend.html
+++ b/attend.html
@@ -40,17 +40,18 @@
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container animated fadeIn main-content">
-    <form action="https://formspree.io/margobra8@gmail.com" method="POST">
+    <form action="https://formspree.io/margobra8@gmail.com" onsubmit="return validateForm()" method="POST" name="attend">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>attend</h4>
+        <p id="form-error" class="form-error-hidden">Please populate all fields.</p>
         <input type="text" name="_gotcha" style="display:none" />
         <label for="NameInput">Your Name</label>
-        <input class="u-full-width" placeholder="Darth Vader" id="NameInput" type="text" name="name">
+        <input class="u-full-width" placeholder="Darth Vader" id="NameInput" type="text" name="name" required="true">
         <label for="EmailInput">Your school-issued email</label>
-        <input class="u-full-width email" placeholder="example@alumno.sek.es" id="EmailInput" type="email" name="_replyto">
+        <input class="u-full-width email" placeholder="example@alumno.sek.es" id="EmailInput" type="email" name="email" required="true">
         <p>We promise we won't share your email with any third party or fill your inbox with spam.</p>
-        <p style="color: #E0E0E0;">Please verify that you aren't a robot after submitting.</p>
+        <p style="color: #B3B3B3;">Please verify that you aren't a robot after submitting.</p>
         <input type="hidden" name="_next" value="//code-sekcc.github.io/success.html" />
         <input type="hidden" name="_format" value="plain" />
         <input class="button" value="Submit" type="submit">
@@ -63,6 +64,10 @@
     <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
     </div>
   </footer>
+
+ <!-- JS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!--<script src="js/validation.js"></script>-->
 
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
