--- a/success.html
+++ b/success.html
@@ -39,7 +39,7 @@
 
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container animated fadeIn">
+  <div class="container animated fadeIn main-content">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>success!</h4>
@@ -48,12 +48,13 @@
       </div>
     </div>
   </div>
-
+js
   <footer>
     <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
     </div>
   </footer>
 
+  
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
