--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <!-- Page Meta
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>code @ SEKCC | Success</title>
+  <title>code @ SEKCC | 404</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="images/favicon.png">
   <meta name="og:image" content="images/favicon.png">
@@ -42,10 +42,10 @@
   <div class="container animated fadeIn main-content">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>success</h4>
-        <p style="color: green;">Your email has been submitted correctly.</p>
-        <img style="margin-bottom: 1em" src="https://media.giphy.com/media/3oEjHBUwuSGbFS5iAE/giphy.gif" alt="OK" width="50%">
-        <p><em>Have a nice day!</em></p>
+        <h4>oops! <span style="opacity: 0.5">aka 404</span></h4>
+        <p>It looks that the page you are looking for doesn't exist...</p>
+        <img style="margin-bottom: 1em" src="https://media.giphy.com/media/l3E6IBxznhuBDfo5i/giphy.gif" alt="Error" width="50%">
+        <p><em>Psst: Remember that you can always <a href="#" onclick="window.history.back()">go back</a></em>.</p>
       </div>
     </div>
   </div>
