--- a/success.html
+++ b/success.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>success</h4>
-        <p style="color: green;">Your email has been submitted correctly.</p>
+        <p style="color: green;">Your info has been submitted correctly. 😉</p>
         <img style="margin-bottom: 1em" src="https://media.giphy.com/media/3oEjHBUwuSGbFS5iAE/giphy.gif" alt="OK" width="50%">
         <p><em>Have a nice day!</em></p>
       </div>
