--- a/attend.html
+++ b/attend.html
@@ -44,7 +44,8 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>attend</h4>
-        <p id="form-error" class="form-error-hidden">You must provide an @alumno.sek.es email.</p>
+        <p id="form-error-not-sek" class="form-error-hidden">You must provide an @alumno.sek.es email.</p>
+        <p id="form-error-not-email" class="form-error-hidden">Please fill all the fields appropiately.</p>
         <input type="text" name="_gotcha" style="display:none" />
         <label for="NameInput">Your Name</label>
         <input class="u-full-width" placeholder="Darth Vader" id="NameInput" type="text" name="name" required="true">
