--- a/404.html
+++ b/404.html
@@ -54,6 +54,10 @@
     </div>
   </footer>
 
+  <!-- Clicky Analytics
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="http://static.getclicky.com/js" type="text/javascript"></script>
+  <script type="text/javascript">try{ clicky.init(101026573); }catch(e){}</script>
   
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
