--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
   <!-- TYPEFORM
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href='css/form-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-
+  
+  <!-- Clicky Analytics
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="http://static.getclicky.com/js" type="text/javascript"></script>
+  <script type="text/javascript">try{ clicky.init(101026573); }catch(e){}</script>
 
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
