--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
   <script src="http://static.getclicky.com/js" type="text/javascript"></script>
   <script type="text/javascript">try{ clicky.init(101026573); }catch(e){}</script>
 
+  <!-- Intercom
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script>
+  window.intercomSettings = {
+    app_id: "yjlid8um"
+  };
+  </script>
+  <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/yjlid8um';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
