--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <img src="https://avatars3.githubusercontent.com/u/23102928" alt="Logo" style="border-radius: 4px; margin-bottom: 15px" width="80px" class="animated fadeInDown logo">
-        <h2>code @ SEKCC</h2>
+        <h2 id="main-title">code @ SEKCC</h2>
         <p>Hey there! This is the online website for <em>SEK-Ciudalcampo's Coding Club</em>, which is part of <em>Project STEAMove</em> and <a href="http://hackclub.com/">Hack Club</a>.</p>
 		<p style="margin-bottom: 0px">The Club's Official Presentation will be held on <strong>February 24, 2017</strong></p>
 		<p>from 16:00-17:00 at the Auditorium next to the lab.</p>
@@ -72,15 +72,17 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href='css/form-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
   
-  <!-- Clicky Analytics
+  <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
+  </script>
   <script src="http://static.getclicky.com/js" type="text/javascript"></script>
   <script type="text/javascript">try{ clicky.init(101026573); }catch(e){}</script>
+  <script src="js/typed.js" type="text/javascript"></script>
+  <script src="js/baffle.js" type="text/javascript"></script>
+  <script src="js/text-animations.js" type="text/javascript"></script>
 
 <!-- EOF
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
-
-
-
