update labels for non-school emails

--- a/attend.html
+++ b/attend.html
@@ -49,8 +49,8 @@
         <input type="text" name="_gotcha" style="display:none" />
         <label for="NameInput">Your Name</label>
         <input class="u-full-width" placeholder="Darth Vader" id="NameInput" type="text" name="name" required="true">
-        <label for="EmailInput">Your school-issued email</label>
-        <input class="u-full-width email" placeholder="example@alumno.sek.es" id="EmailInput" type="email" name="email" required="true">
+        <label for="EmailInput">Your email</label>
+        <input class="u-full-width email" placeholder="darth.vader@galaxy.com" id="EmailInput" type="email" name="email" required="true">
         <p>We promise we won't share your email with any third party or fill your inbox with spam.</p>
         <p style="color: #B3B3B3;">Please verify that you aren't a robot after submitting.</p>
         <input type="hidden" name="_next" value="//code-sekcc.github.io/success.html" />
