--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="https://avatars3.githubusercontent.com/u/23102928" alt="Logo" style="border-radius: 4px; margin-bottom: 15px" width="80px" class="animated fadeInDown logo">
         <h2 id="main-title">code @ SEKCC</h2>
         <p>Hey there! This is the online website for <em>SEK-Ciudalcampo's Coding Club</em>, which is part of <em>Project STEAMove</em> and <a href="http://hackclub.com/">Hack Club</a>.</p>
-		<p style="margin-bottom: 0px">The Club's Official Presentation will be held on <strong>February 24, 2017</strong></p>
+		<p style="margin-bottom: 0px">The Club's 2017-2018 Presentation will be held on <strong>September 11, 2017</strong></p>
 		<p>from 16:00-17:00 at the Auditorium next to the lab.</p>
 		<!--<a class="typeform-share button button-primary" href="https://margobra8.typeform.com/to/mIvGaD" data-mode="1" target="_blank">Attend</a>-->
         <a class="button button-primary" href="attend.html">Attend</a>
