--- a/attend.html
+++ b/attend.html
@@ -5,7 +5,7 @@
   <!-- Page Meta
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>code @ SEKCC | Attend</title>
+  <title>code @ SEKCC | Solicitud</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="images/favicon.png">
   <meta name="og:image" content="images/favicon.png">
@@ -43,19 +43,19 @@
     <form action="https://formspree.io/margobra8@gmail.com" onsubmit="return validateForm()" method="POST" name="attend">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>attend</h4>
+        <h4>solicitud (beta)</h4>
         <p id="form-error-not-sek" class="form-error-hidden">You must provide an @alumno.sek.es email.</p>
-        <p id="form-error-not-email" class="form-error-hidden">Please fill all the fields appropiately.</p>
+        <p id="form-error-not-email" class="form-error-hidden">Por favor, rellena todos los campos.</p>
         <input type="text" name="_gotcha" style="display:none" />
-        <label for="NameInput">Your Name</label>
+        <label for="NameInput">Nombre</label>
         <input class="u-full-width" placeholder="Darth Vader" id="NameInput" type="text" name="name" required="true">
-        <label for="EmailInput">Your email</label>
+        <label for="EmailInput">Email</label>
         <input class="u-full-width email" placeholder="darth.vader@galaxy.com" id="EmailInput" type="email" name="email" required="true">
-        <p>We promise we won't share your email with any third party or fill your inbox with spam.</p>
-        <p style="color: #B3B3B3;">Please verify that you aren't a robot after submitting.</p>
+        <p>Prometemos no compartir esta información con terceros o llenar tu inbox de spam.</p>
+        <p style="color: #B3B3B3;">Tendrás que verificar que no eres un robot tras enviar.</p>
         <input type="hidden" name="_next" value="//code-sekcc.github.io/success.html" />
         <input type="hidden" name="_format" value="plain" />
-        <input class="button" value="Submit" type="submit">
+        <input class="button" value="Enviar" type="submit">
       </div>
     </div>
     </form>
