--- a/attend.html
+++ b/attend.html
@@ -58,7 +58,7 @@
   </div>
 
   <footer>
-    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
+    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. <script type="text/javascript">document.write(new Date().getFullYear());</script>.
     </div>
   </footer>
 
