--- a/success.html
+++ b/success.html
@@ -40,17 +40,13 @@
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container animated fadeIn main-content">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>success</h4>
-        <p style="color: green;">Your info has been submitted correctly. 😉</p>
+        <h4>✅</h4>
+        <p style="color: green;">Tus datos se han enviado correctamente. 😉</p>
         <img style="margin-bottom: 1em" src="https://media.giphy.com/media/3oEjHBUwuSGbFS5iAE/giphy.gif" alt="OK" width="50%">
-        <p><em>Have a nice day!</em></p>
-      </div>
-    </div>
+        <p><em>¡Qué tengas un feliz día!</em></p>
   </div>
   <footer>
-    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. SEK-Ciudalcampo, <script type="text/javascript">document.write(new Date().getFullYear());</script>. <a href="contact.html">Contact</a>
+    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. <script type="text/javascript">document.write(new Date().getFullYear());</script>.
     </div>
   </footer>
 
