--- a/attend.html
+++ b/attend.html
@@ -39,7 +39,7 @@
 
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container animated fadeIn main-content">
+  <div class="container animated fadeIn main-content" style="padding: 8rem 0 7rem;">
     <form action="https://formspree.io/margobra8@gmail.com" onsubmit="return validateForm()" method="POST" name="attend">
         <h4>solicitud (beta)</h4>
         <p id="form-error-not-sek" class="form-error-hidden">You must provide an @alumno.sek.es email.</p>
