--- a/success.html
+++ b/success.html
@@ -39,7 +39,7 @@
 
   <!-- Primary Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container animated fadeIn main-content">
+  <div class="container animated fadeIn main-content" style="padding: 8rem 0 7rem;">
         <h4>✅</h4>
         <p style="color: green;">Tus datos se han enviado correctamente. 😉</p>
         <img style="margin-bottom: 1em" src="https://media.giphy.com/media/3oEjHBUwuSGbFS5iAE/giphy.gif" alt="OK" width="50%">
