update form headline and remove broken links

--- a/attend.html
+++ b/attend.html
@@ -5,7 +5,7 @@
   <!-- Page Meta
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>code @ SEKCC | Solicitud</title>
+  <title>ElderHub Tech Beta Form</title>
   <meta name="twitter:card" content="summary">
   <meta name="twitter:image" content="images/favicon.png">
   <meta name="og:image" content="images/favicon.png">
@@ -51,14 +51,14 @@
         <input class="u-full-width email" placeholder="darth.vader@galaxy.com" id="EmailInput" type="email" name="email" required="true">
         <p>Prometemos no compartir esta información con terceros o llenar tu inbox de spam.</p>
         <p style="color: #B3B3B3;">Tendrás que verificar que no eres un robot tras enviar.</p>
-        <input type="hidden" name="_next" value="//code-sekcc.github.io/success.html" />
+        <input type="hidden" name="_next" value="http://code-sekcc.github.io/success.html" />
         <input type="hidden" name="_format" value="plain" />
         <input class="button" value="Enviar" type="submit">
     </form>
   </div>
 
   <footer>
-    <div class="container">Released under the <a href="http://margobra8.ml/legal/license">MIT License</a>. <script type="text/javascript">document.write(new Date().getFullYear());</script>.
+    <div class="container">Released under the MIT License. <script type="text/javascript">document.write(new Date().getFullYear());</script>.
     </div>
   </footer>
 
